Fixed text wrapping

--- a/src/extensions/richTextFieldCustomizer/RichTextFieldCustomizerFieldCustomizer.module.scss
+++ b/src/extensions/richTextFieldCustomizer/RichTextFieldCustomizerFieldCustomizer.module.scss
@@ -1,6 +1,5 @@
 .RichTextFieldCustomizer {
-  .cell {
-    padding-top: 11px;
-    white-space: normal;
-  }
+  padding-top: 11px;
+  white-space: normal;
+  word-break: break-word;
 }
